<resources>
    <string name="app_name">Construction City</string>
    <string name="skip">Skip</string>
    <string name="create_account_login">Create Account / Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="please_enter_number_phone">Please Enter number phone</string>
    <string name="next">Next</string>
    <string name="number_phone">Number Phone</string>
    <string name="please_enter_the_activation_code">Please enter the activation code</string>
    <string name="return_send_code">return send code</string>
    <string name="code_has_not_arrived">Code has not arrived</string>
    <string name="user_name">Enter User Name</string>
    <string name="enter_password">Enter password</string>
    <string name="confirm_password">confirm password</string>
    <string name="development_by">Development By</string>
    <string name="company_tera_ninja_2022">company tera ninja 2022</string>
    <string name="Next">Next</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="your_order_in">your order in</string>
    <string name="name_product">name Product</string>
    <string name="by">By</string>
    <string name="available">available</string>
    <string name="product_description">Product Description</string>
    <string name="additional_information">additional information</string>
    <string name="color">color :</string>
    <string name="type">Type :</string>
    <string name="Add">Add to cart</string>
    <string name="exclusive_offers">Exclusive Offers</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Site">Site confirmation</string>
    <string name="paiement_when_recieving">Paiement when recieving</string>
    <string name="the_total">the total</string>
    <string name="delivery">Delivery</string>
    <string name="added_tax">added tax</string>
    <string name="subtotal">Subtotal</string>
    <string name="add_discount_coupon">Add discount coupon</string>
    <string name="add_number_other">add number other</string>
    <string name="save">Save</string>
    <string name="add_information">Add information</string>
    <string name="slit_number">slit number</string>
    <string name="turn_number">turn number</string>
    <string name="building_number_name">Building number / name</string>
    <string name="other">Other</string>
    <string name="work_site">Work site</string>
    <string name="street_area_name">Street/area name</string>
    <string name="the_work">the work</string>
    <string name="villa">villa</string>
    <string name="building">Building</string>
    <string name="address_confirmation">Address confirmation</string>
    <string name="home">Home</string>
    <string name="change">change</string>
    <string name="password">Password</string>
    <string name="please_enter_password">Please Enter Password</string>
    <string name="login">Login</string>
    <string name="please_enter_your_name">Please Enter name</string>
    <string name="confirmation">The password does not match the confirmation password</string>
    <string name="show_all">Show all</string>
    <string name="profile_personly">Profile personal</string>
    <string name="saved_titles">Saved Location</string>
    <string name="orders">Orders</string>
    <string name="change_the_language">change the language</string>
    <string name="log_out">Log Out</string>
    <string name="changename">Change</string>
    <string name="changeyourname">Change Your Name</string>
    <string name="changenumberphone">Change Number Phone</string>
    <string name="rate_order">قيم تجربتك معنا</string>
    <string name="caselogin">You must log in first</string>
    <string name="add">Add In Card</string>
    <string name="Confirmation">Confirmation</string>
    <string name="add_location">add Location</string>
    <string name="chosecity">Chose City</string>
    <string name="change_password">Change Password</string>
    <string name="new_password">new password</string>
    <string name="old_password">old password</string>
    <string name="oldpass">Enter old password</string>
    <string name="newpass">Enter new password</string>
    <string name="confirm">Enter Confirm password</string>
    <string name="namestreet">Please Enter name Street</string>
    <string name="homes">Home</string>
    <string name="current_orders">current orders</string>
    <string name="previous_orders">previous orders</string>
    <string name="rate_orders">rate order</string>
    <string name="required_products">Required Products</string>
    <string name="reorder">reorder</string>
</resources>