<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        android:id="@+id/textchangepassword"
        android:fontFamily="@font/alfont_com_sfproar_semibold"
        android:text="@string/change_password"
        android:textSize="@dimen/_20sdp"
        android:textColor="#004080"/>
    <EditText
        android:layout_width="@dimen/_250sdp"
        android:layout_height="@dimen/_45sdp"
        android:background="#E7F7FC"
        android:textColor="@color/black"
        android:inputType="text"
        android:layout_marginEnd="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/_10sdp"
        android:textSize="@dimen/_15sdp"
        android:textColorHint="@color/black"
        android:gravity="start|center"
        android:layout_marginTop="@dimen/_10sdp"
        android:hint="@string/old_password"
        android:paddingStart="@dimen/_2sdp"
        app:layout_constraintTop_toBottomOf="@id/textchangepassword"
        android:id="@+id/old_password" />
    <EditText
        android:layout_width="@dimen/_250sdp"
        android:layout_height="@dimen/_45sdp"
        android:background="#E7F7FC"
        android:textColor="@color/black"
        android:inputType="text"
        android:layout_marginEnd="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/_10sdp"
        android:textSize="@dimen/_15sdp"
        android:textColorHint="@color/black"
        android:gravity="start|center"
        android:layout_marginTop="@dimen/_10sdp"
        android:hint="@string/new_password"
        android:paddingStart="@dimen/_2sdp"
        app:layout_constraintTop_toBottomOf="@id/old_password"
        android:id="@+id/new_password" />
    <EditText
        android:layout_width="@dimen/_250sdp"
        android:layout_height="@dimen/_45sdp"
        android:background="#E7F7FC"
        android:textColor="@color/black"
        android:inputType="text"
        android:layout_marginEnd="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/_10sdp"
        android:textSize="@dimen/_15sdp"
        android:textColorHint="@color/black"
        android:gravity="start|center"
        android:layout_marginTop="@dimen/_10sdp"
        android:hint="@string/confirm_password"
        android:paddingStart="@dimen/_2sdp"
        app:layout_constraintTop_toBottomOf="@id/new_password"
        android:id="@+id/confarm_password" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/Save"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:background="@drawable/style_buttonsignup"
        android:fontFamily="@font/alfont_com_sfproar_semibold"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_13sdp"
        android:textStyle="bold"
        app:backgroundTint="@null"
        app:backgroundTintMode="add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confarm_password" />

</androidx.constraintlayout.widget.ConstraintLayout>