<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Splash_One">
        <TextView
            android:fontFamily="@font/alfont_com_sfproar_semibold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/skip"
            style="@style/text"
            android:textSize="@dimen/_15sdp"
            android:id="@+id/Skip"
            android:textAllCaps="false"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="22dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:textStyle="bold" />
<ImageView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:src="@drawable/logo"
    android:layout_marginEnd="@dimen/_5sdp"
    android:layout_marginStart="@dimen/_5sdp"
    android:layout_marginTop="@dimen/_20sdp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@id/Skip"
    android:id="@+id/logo"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/SignUp_Searh_Work"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_20sdp"

            android:background="@drawable/style_buttonsignup"
            android:elevation="3dp"
            android:fontFamily="@font/alfont_com_sfproar_semibold"

            android:text="@string/create_account_login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_17sdp"
            android:textStyle="bold"
            app:backgroundTint="@null"
            app:backgroundTintMode="add"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_3sdp"
            android:gravity="center"
            android:id="@+id/l1"
            android:layout_marginBottom="@dimen/_5sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="horizontal"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/teraninja_logo"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/development_by"
                android:textSize="@dimen/_10sdp"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_5sdp"
                android:textColor="#18A7E0"
                android:fontFamily="@font/alfont_com_sfproar_semibold"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_5sdp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/company_tera_ninja_2022"
                android:layout_gravity="center"
                android:textColor="#18A7E0"
                android:textSize="@dimen/_10sdp"
                android:fontFamily="@font/alfont_com_sfproar_semibold"/>





        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>