<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Login">

        <ImageView
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/_20sdp"
            android:src="@drawable/logo"
            android:id="@+id/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/please_enter_number_phone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logo"
            android:layout_marginTop="@dimen/_20sdp"
            style="@style/text"
            android:fontFamily="@font/alfont_com_sfproar_semibold"
            android:textSize="@dimen/_13sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:id="@+id/text_dscrption" />

        <Spinner
            android:id="@+id/spinner_code_cuontrey"
            android:layout_width="@dimen/_70sdp"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/backgrund_spinner_login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_dscrption"
             />

        <TextView
            android:layout_width="@dimen/_2sdp"
            android:layout_height="@dimen/_40sdp"
            android:background="#27A4DA"
            app:layout_constraintStart_toEndOf="@id/spinner_code_cuontrey"
            app:layout_constraintTop_toTopOf="@id/spinner_code_cuontrey"
            app:layout_constraintBottom_toBottomOf="@id/spinner_code_cuontrey"
            android:id="@+id/l1" />

        <EditText
            android:layout_width="@dimen/_140sdp"
            android:layout_height="@dimen/_45sdp"
            android:background="#E7F7FC"
            android:textColor="@color/black"
            android:inputType="number"
            android:textSize="@dimen/_15sdp"
            android:textColorHint="@color/black"
            android:gravity="start|center"
            android:hint="@string/number_phone"
            android:paddingStart="@dimen/_2sdp"
            app:layout_constraintTop_toTopOf="@id/spinner_code_cuontrey"
            app:layout_constraintBottom_toBottomOf="@id/spinner_code_cuontrey"
            app:layout_constraintStart_toEndOf="@id/l1"
            android:id="@+id/numberphone" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/SignUp_Searh_Work"
            android:layout_width="@dimen/_60sdp"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:background="@drawable/style_buttonsignup"
            android:fontFamily="@font/alfont_com_sfproar_semibold"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_13sdp"
            android:textStyle="bold"
            app:backgroundTint="@null"

            app:backgroundTintMode="add"
            app:layout_constraintBottom_toBottomOf="@id/numberphone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/numberphone"
            app:layout_constraintTop_toTopOf="@id/numberphone" />

        <ProgressBar
            android:layout_width="@dimen/_60sdp"
            android:layout_height="@dimen/_60sdp"
            android:background="@drawable/coustem_progress"
            android:visibility="gone"
            android:id="@+id/progress"
            app:layout_constraintStart_toEndOf="@id/numberphone"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/_16sdp"
            app:layout_constraintTop_toTopOf="@id/numberphone"
            app:layout_constraintBottom_toBottomOf="@id/numberphone"/>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_3sdp"
            android:gravity="center"
            android:layout_marginBottom="@dimen/_5sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="horizontal"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/teraninja_logo"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/development_by"
                android:layout_gravity="center"
                android:textSize="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_5sdp"
                android:textColor="#18A7E0"
                android:fontFamily="@font/alfont_com_sfproar_semibold"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_5sdp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/company_tera_ninja_2022"
                android:layout_gravity="center"
                android:textSize="@dimen/_10sdp"
                android:textColor="#18A7E0"
                android:fontFamily="@font/alfont_com_sfproar_semibold"/>





        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>